update head title in html file

--- a/zimcasts-web/html/index.html
+++ b/zimcasts-web/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<head title="Welcome to test website">
-
+<head>
+    <title>Welcome to Test Website!</title>
 </head>
 <body>
     <h1>HELLO WORLD from ZIMCASTS</h1>
